deploy/debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: climbing-comp
  labels:
    name: debug
spec:
  securityContext:
    # fsGroup: 1000
    # runAsUser: 1000
    # runAsGroup: 1000
    fsGroup: 0
    runAsUser: 0
    runAsGroup: 0
  containers:
  - name: debug
    image: alpine:latest
    command: [ 'sh', '-c', 'apk update && apk add sqlite; sleep 24h' ]
    resources:
      requests:
        memory: "32Mi"
        cpu: 50m
      limits:
        memory: "256Mi"
        cpu: "400m"
    volumeMounts:
      - name: data
        mountPath: /data
    securityContext:
      allowPrivilegeEscalation: true
      capabilities:
          drop: [ "ALL" ]
      runAsNonRoot: false
      seccompProfile:
        type: RuntimeDefault
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: climbing-comp-data-pvc
