deploy/k8s.yml
##############################################################
# Kubernetes spec for running the 'climbing comp' application
# https://github.com/jcookin/climbing-comp
##############################################################
---
apiVersion: v1
kind: Namespace
metadata:
  name: climbing-comp
  labels:
    app: climbing-comp
---
apiVersion: v1
kind: Service
metadata:
  name: climbing-comp-app-svc
  namespace: climbing-comp
  labels:
    app: climbing-comp
spec:
  selector:
    app: climbing-comp-app
  ports:
  - port: 80
    targetPort: http-app
---
apiVersion: v1
kind: Service
metadata:
  name: climbing-comp-dashboard-svc
  namespace: climbing-comp
  labels:
    app: climbing-comp-dashboard
spec:
  selector:
    app: climbing-comp-dashboard
  ports:
  - port: 80
    targetPort: http-grafana
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climbing-comp-ing
  namespace: climbing-comp
  labels:
    app: climbing-comp
  annotations:
    ## tls certificate issuer configurations
    cert-manager.io/cluster-issuer: "letsencrypt"
    ## route-specific configurations for nginx
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - comp.reclusivy.com
      secretName: climbing-comp-tls
  rules:
  - host: comp.reclusivy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: climbing-comp-app-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/dashboard"
        backend:
          service:
            name: climbing-comp-dashboard-svc
            port: 
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: climbing-comp-app
  namespace: climbing-comp
spec:
  selector:
    matchLabels:
      app: climbing-comp-app
  template:
    metadata:
      labels:
        app: climbing-comp-app
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: app
        image: jcookin/climbing-comp:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: 100m
          limits:
            memory: "256Mi"
            cpu: "400m"
        ports:
        - containerPort: 8000
          name: http-app
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
              drop: [ "ALL" ]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 8080
        #     scheme: HTTP
        #   initialDelaySeconds: 10
        #   periodSeconds: 30
        #   successThreshold: 1
        #   timeoutSeconds: 2
        # livenessProbe:
        #   failureThreshold: 3
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   successThreshold: 1
        #   tcpSocket:
        #     port: 8080
        #   timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: climbing-comp-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: climbing-comp-dashboard
  namespace: climbing-comp
  labels:
    app: climbing-comp-dashboard
spec:
  selector:
    matchLabels:
      app: climbing-comp-dashboard
  template:
    metadata:
      labels:
        app: climbing-comp-dashboard
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: dashboard
        image: grafana/grafana:11.5.2
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
        volumeMounts:
          - name: app-data
            mountPath: /data
            readOnly: true
          - name: grafana-data
            mountPath: /var/lib/grafana
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /robots.txt
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 1
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: climbing-comp-data-pvc
        - name: grafana-data
          persistentVolumeClaim:
            claimName: climbing-comp-dashboard-pvc
---
